Kubernetes/hostinfoblue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: machineinfo-blue
spec:
  selector:
    matchLabels:
      app: machineinfo-blue
  template:
    metadata:
      labels:
        app: machineinfo-blue
    spec:
      containers:
      - name: machineinfo-blue
        image: nehashirsat/devops-hostinfo:blue
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: machineinfo-blue
spec:
  type: ClusterIP
  selector:
    app: machineinfo-blue
  ports:
  - port: 80
    targetPort: 80
