Kubernetes/gkeingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hostinfo-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - host: hostinfopink.hhaexchange.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: machineinfo-pink
                port:
                  number: 80
    - host: hostinfoblue.hhaexchange.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: machineinfo-blue
                port:
                  number: 80
